--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,10 +31,6 @@
         <item name="android:textColor">@color/textColorSecondary</item>
         <item name="android:textColorPrimary">@color/textColorSecondary</item>
 
-        <item name="mon_textColorPrimary">@color/black</item>
-        <item name="mon_textColorSecondary">@color/black</item>
-        <item name="mon_inputBackground">@color/white</item>
-        <item name="mon_iconTint">@color/colorPrimary</item>
 
     </style>
 
@@ -45,10 +41,15 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/textColorSecondary</item>
+        <item name="colorControlHighlight">@color/dark_inputBackground</item>
 
         <item name="mon_textColorPrimary">@color/white</item>
         <item name="mon_textColorSecondary">@color/dark_textSecondary</item>
         <item name="mon_inputBackground">@color/dark_inputBackground</item>
+        <item name="mon_inputBackgroundError">@color/errorField</item>
         <item name="mon_iconTint">@color/white</item>
+        <item name="mon_buttonColorDisabled">@color/dark_inputBackground</item>
+
+        <item name="mon_sent_share_title">@string/sent_share_title_dark</item>
     </style>
 </resources>
