--- a/app/src/main/res/layout/keyboard_view.xml
+++ b/app/src/main/res/layout/keyboard_view.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content"
-                                                   android:layout_gravity="bottom"
-                                                   android:animateLayoutChanges="true"
-                                                   android:minHeight="294dp"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:animateLayoutChanges="true"
+    android:minHeight="200dp">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_margin_left"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/margin_edges_half"/>
+        app:layout_constraintGuide_begin="@dimen/margin_edges_half" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_margin_right"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/margin_edges_half"/>
+        app:layout_constraintGuide_end="@dimen/margin_edges_half" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_margin_top"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/margin_edges_half"/>
+        app:layout_constraintGuide_begin="@dimen/margin_edges_half" />
 
     <ImageView
         android:id="@+id/bip_icon"
@@ -36,7 +35,7 @@
         android:layout_height="32dp"
         android:src="@drawable/ic_bip_round"
         app:layout_constraintStart_toStartOf="@+id/guide_margin_left"
-        app:layout_constraintTop_toTopOf="@+id/guide_margin_top"/>
+        app:layout_constraintTop_toTopOf="@+id/guide_margin_top" />
 
     <io.monke.app.internal.views.widgets.ColoredProgressBar
         android:id="@+id/bip_progress"
@@ -49,8 +48,7 @@
         app:layout_constraintEnd_toEndOf="@id/bip_icon"
         app:layout_constraintStart_toStartOf="@id/bip_icon"
         app:layout_constraintTop_toTopOf="@id/bip_icon"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/balance"
@@ -63,7 +61,7 @@
         android:textSize="@dimen/text_size_default"
         app:layout_constraintStart_toEndOf="@id/bip_icon"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="30 000 000.1234"/>
+        tools:text="30 000 000.1234" />
 
     <TextView
         android:id="@+id/balance_delegated"
@@ -74,14 +72,13 @@
         android:textSize="@dimen/text_size_12"
         app:layout_constraintStart_toStartOf="@id/balance"
         app:layout_constraintTop_toBottomOf="@id/balance"
-        tools:text="9 600 000.0396"/>
+        tools:text="9 600 000.0396" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/account_button"
+        style="@style/CardInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardElevation="4dp"
-        app:cardBackgroundColor="?attr/mon_inputBackground"
         app:layout_constraintEnd_toStartOf="@id/guide_margin_right"
         app:layout_constraintTop_toTopOf="@id/guide_margin_top">
 
@@ -95,18 +92,16 @@
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:textSize="@dimen/text_size_default"
-            tools:text="Mx2012...1a21"/>
+            tools:text="Mx2012...1a21" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/address_input_container"
+        style="@style/CardInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_edges"
         android:descendantFocusability="beforeDescendants"
-        app:cardBackgroundColor="?attr/mon_inputBackground"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
         app:layout_constraintStart_toStartOf="@id/guide_margin_left"
         app:layout_constraintTop_toBottomOf="@id/account_button">
@@ -114,9 +109,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/mon_inputBackground"
-            >
-
+            android:background="?attr/mon_inputBackground">
+<!--            75000/63/0.11-->
             <io.monke.app.internal.views.widgets.BipCircleImageView
                 android:id="@+id/address_icon"
                 android:layout_width="16dp"
@@ -124,12 +118,11 @@
                 android:layout_marginStart="@dimen/margin_edges_half"
                 android:background="@color/transparent"
                 android:src="@drawable/ic_copy"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:visibility="gone"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="gone"
-                />
+                tools:visibility="gone" />
 
             <EditText
                 android:id="@+id/dummy_input"
@@ -137,17 +130,15 @@
                 android:layout_height="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:background="@color/transparent"
                 android:id="@+id/input_address"
                 android:layout_width="0dp"
                 android:layout_height="44dp"
                 android:layout_marginStart="4dp"
-                android:textSize="@dimen/text_size_default"
                 android:layout_marginEnd="@dimen/margin_edges_half"
+                android:background="@color/transparent"
                 android:fontFamily="@string/font_medium"
                 android:hint="ADDRESS"
                 android:inputType="text"
@@ -159,12 +150,13 @@
                 android:tag="address"
                 android:textColor="?attr/mon_textColorPrimary"
                 android:textColorHint="?android:attr/textColorHint"
-                app:layout_goneMarginStart="@dimen/margin_edges_half"
+                android:textSize="@dimen/text_size_default"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/action_copy"
                 app:layout_constraintStart_toEndOf="@id/address_icon"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Mx408fb7d25f40d0361ee370cff812c1fe1fac74a7"/>
+                app:layout_goneMarginStart="@dimen/margin_edges_half"
+                tools:text="Mx408fb7d25f40d0361ee370cff812c1fe1fac74a7" />
 
             <ImageView
                 android:id="@+id/action_copy"
@@ -175,27 +167,24 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
-                android:tint="?attr/mon_iconTint"
                 android:src="@drawable/ic_copy"
+                android:tint="?attr/mon_iconTint"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/input_address"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/coin_input_container"
+        style="@style/CardInput"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_edges_half"
         android:descendantFocusability="beforeDescendants"
         android:minWidth="100dp"
-        app:cardBackgroundColor="?attr/mon_inputBackground"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="4dp"
         app:layout_constraintEnd_toStartOf="@id/amount_input_container"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -217,7 +206,7 @@
                 app:civ_border_width="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/input_coin"
@@ -245,7 +234,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/coin_icon"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="BIPBIPBIPB"/>
+                tools:text="BIPBIPBIPB" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -253,6 +242,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/amount_input_container"
+        style="@style/CardInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_edges_half"
@@ -260,9 +250,6 @@
         android:clickable="false"
         android:descendantFocusability="beforeDescendants"
         android:focusable="false"
-        app:cardBackgroundColor="?attr/mon_inputBackground"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@id/coin_input_container"
@@ -281,11 +268,11 @@
                 android:layout_marginEnd="@dimen/margin_edges_half"
                 android:background="@android:color/transparent"
                 android:clickable="true"
+                android:digits="0,1,2,3,4,5,6,7,8,9,.,\,"
+                android:ellipsize="end"
                 android:focusable="true"
                 android:fontFamily="@string/font_medium"
                 android:hint="AMOUNT"
-                android:digits="0,1,2,3,4,5,6,7,8,9,.,\,"
-                android:ellipsize="end"
                 android:inputType="textMultiLine|numberDecimal"
 
                 android:maxLines="1"
@@ -301,7 +288,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                tools:text="100 000 000 000.1234"/>
+                tools:text="100 000 000 000.1234" />
 
             <io.monke.app.internal.views.widgets.WalletButton
                 android:id="@+id/action_use_max"
@@ -316,7 +303,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/input_amount"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -326,12 +313,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_edges_half"
+        android:textColor="?attr/mon_textColorSecondary"
         android:textSize="@dimen/text_size_12"
         android:textStyle="bold"
-        android:textColor="?attr/mon_textColorSecondary"
         app:layout_constraintStart_toStartOf="@id/guide_margin_left"
         app:layout_constraintTop_toBottomOf="@id/coin_input_container"
-        tools:text="Available 100 000 000.0000 BIP"/>
+        tools:text="Available 100 000 000.0000 BIP" />
 
     <TextView
         android:id="@+id/fee_value"
@@ -339,11 +326,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_edges_half"
         android:text="Fee 0.0100 BIP"
+        android:textColor="?attr/mon_textColorSecondary"
         android:textSize="@dimen/text_size_12"
         android:textStyle="bold"
-        android:textColor="?attr/mon_textColorSecondary"
         app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
-        app:layout_constraintTop_toBottomOf="@id/amount_input_container"/>
+        app:layout_constraintTop_toBottomOf="@id/amount_input_container" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -359,14 +346,14 @@
             layout="@layout/keypad_hex"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <include
             android:id="@+id/keypad_digits"
             layout="@layout/keypad_digits"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <include
             android:id="@+id/coin_selector"
@@ -375,7 +362,7 @@
             android:layout_height="wrap_content"
             android:maxHeight="162dp"
             android:minHeight="54dp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <include
             android:id="@+id/share_container"
@@ -383,7 +370,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
     </FrameLayout>
 
     <io.monke.app.internal.views.widgets.WalletButton
@@ -396,7 +383,7 @@
         android:textSize="@dimen/text_size_default"
         app:layout_constraintEnd_toEndOf="@id/guide_margin_right"
         app:layout_constraintStart_toStartOf="@id/guide_margin_left"
-        app:layout_constraintTop_toBottomOf="@id/fragment_container"/>
+        app:layout_constraintTop_toBottomOf="@id/fragment_container" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/error_container"
@@ -414,13 +401,11 @@
             android:textAlignment="center"
             android:textColor="@color/errorColor"
             android:textStyle="bold"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/error_close"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. "
-            tools:visibility="visible"/>
+            tools:text="This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. This is an error. " />
 
         <ImageView
             android:id="@+id/error_close"
@@ -435,20 +420,20 @@
             android:tint="@color/errorColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Space
-        android:layout_marginTop="4dp"
         android:id="@+id/bottom_space"
         android:layout_width="0dp"
         android:layout_height="@dimen/margin_edges_half"
+        android:layout_marginTop="4dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/error_container"
-        app:layout_goneMarginTop="0dp"/>
+        app:layout_goneMarginTop="0dp" />
 
     <ImageView
         android:id="@+id/switch_keyboard"
@@ -462,7 +447,7 @@
         app:layout_constraintBottom_toTopOf="@id/edge_space"
         app:layout_constraintStart_toStartOf="@id/guide_margin_left"
         app:layout_constraintTop_toBottomOf="@id/bottom_space"
-        app:layout_constraintVertical_bias="1"/>
+        app:layout_constraintVertical_bias="1" />
 
     <FrameLayout
         android:id="@+id/right_buttons_container"
@@ -482,7 +467,7 @@
             android:src="@drawable/ic_chevron_down_white"
             android:tint="@color/grey"
             android:visibility="visible"
-            app:layout_constraintVertical_bias="1"/>
+            app:layout_constraintVertical_bias="1" />
 
         <TextView
             android:id="@+id/btn_close"
@@ -500,7 +485,7 @@
             android:textColor="@color/grey"
             android:textSize="@dimen/text_size_default"
             android:textStyle="bold"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </FrameLayout>
 
 
@@ -510,7 +495,7 @@
         android:layout_height="@dimen/margin_edges"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!--    <FrameLayout-->
     <!--        android:id="@+id/container"-->
