--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,7 +31,25 @@
         <item name="android:textColor">@color/textColorSecondary</item>
         <item name="android:textColorPrimary">@color/textColorSecondary</item>
 
+        <item name="mon_textColorPrimary">@color/black</item>
+        <item name="mon_textColorSecondary">@color/black</item>
+        <item name="mon_inputBackground">#FFFFFFFF</item>
+        <item name="mon_inputBackgroundError">@color/errorField</item>
+        <item name="mon_iconTint">@color/colorPrimary</item>
 
+        <item name="mon_buttonColorDefault">@color/buttonColorDefault</item>
+        <item name="mon_buttonColorHovered">@color/buttonColorHovered</item>
+        <item name="mon_buttonColorFocused">@color/buttonColorFocused</item>
+        <item name="mon_buttonColorDisabled">@color/buttonColorDisabled</item>
+
+        <item name="mon_sent_share_title">@string/sent_share_title_light</item>
+
+    </style>
+
+    <style name="CardInput" parent="CardView">
+        <item name="cardBackgroundColor">?mon_inputBackground</item>
+        <item name="cardElevation">4dp</item>
+        <item name="cardCornerRadius">2dp</item>
     </style>
 
     <style name="KB_Dark" parent="KB">
