--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,7 +33,7 @@
 
         <item name="mon_textColorPrimary">@color/black</item>
         <item name="mon_textColorSecondary">@color/black</item>
-        <item name="mon_inputBackground">#FFFFFFFF</item>
+        <item name="mon_inputBackground">@color/white</item>
         <item name="mon_inputBackgroundError">@color/errorField</item>
         <item name="mon_iconTint">@color/colorPrimary</item>
 
