--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,7 +49,6 @@
         <!--<item name="android:borderlessButtonStyle">@style/Wallet.Button</item>-->
         <item name="android:soundEffectsEnabled">false</item>
 
-
         <!--        Theme specific-->
         <item name="mon_textColorPrimary">@color/black</item>
         <item name="mon_textColorSecondary">@color/black</item>
@@ -61,6 +60,7 @@
         <item name="mon_buttonColorHovered">@color/buttonColorHovered</item>
         <item name="mon_buttonColorFocused">@color/buttonColorFocused</item>
         <item name="mon_buttonColorDisabled">@color/buttonColorDisabled</item>
+        <item name="mon_keyboard_background">@color/light_background</item>
 
         <item name="mon_sent_share_title">@string/sent_share_title_light</item>
     </style>
