--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,20 +20,17 @@
         app:theme="@style/WalletPrimaryToolbar"
         app:titleTextColor="@android:color/white"
         tools:subtitle="9 600 000.0395 BIP"
-        tools:title="30 000 000.1234 BIP"
-        />
+        tools:title="30 000 000.1234 BIP" />
 
-    <FrameLayout
-        android:id="@+id/prefs_container"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        >
-
-    </FrameLayout>
+        tools:listitem="@layout/row_settings_item" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
