--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,6 +53,7 @@
     <color name="greySeparator">#FFE1E1E1</color>
     <color name="bottom_navigation_color">@color/colorPrimaryDark</color>
     <color name="textColorGrey">#929292</color>
+    <color name="textColorGrey2">#8a000000</color>
     <color name="greyBackground">#F0F0F0</color>
     <color name="bg_alert_dialog">#B2FFFFFF</color>
     <color name="btn_disabled">#929292</color>
