--- a/app/src/main/res/drawable/btn_white.xml
+++ b/app/src/main/res/drawable/btn_white.xml
@@ -26,7 +26,7 @@
 
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#80502EC2">
+    android:color="?android:colorControlHighlight">
     <item>
         <selector>
             <item android:state_enabled="false">
